--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,6 +111,14 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/button_connect_printer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Connect Printer"
+            android:visibility="visible" />
+
+        <Button
             android:id="@+id/button_unselect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
